2018-04-11 Magnus Hagdorn
 * piccolo2/player/player.ui: rename text label

2018-04-11 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: set record parameters when setting up a
   schedule

2018-04-11 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: set current run directly

2018-04-10 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: allow auto integration, repeat measurements
   and delay settings directly; disable parameter settings when server is 
   busy

2018-03-30 Magnus Hagdorn
 * piccolo2/player/player.ui: increase maximum number of repeats to 9999;
 fixes GUI-13

2017-12-21 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: display version strings
 * piccolo2/player/player.ui: add place to display versions

2017-12-20 Magnus Hagdorn
 * piccolo2/player/SpectraList.py: sort out new file pattern

2017-12-18 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: get integration time source and colour cell
   accordingly

2017-12-13 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: handle extended status

2017-12-12 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: update output Directory when notified it
   changed by the server

2017-12-12 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: set run name to the latest one used; hook up
   Runs button
 * piccolo2/player/player.ui: add button to select run
 * piccolo2/player/RunList.py: new dialog for selecting run
 * piccolo2/player/runlist.ui: UI for new dialog

2017-12-11 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: hook up quiet time dialog
 * piccolo2/player/Schedule.py: disable spinboxes when repeat is disabled
 * piccolo2/player/player.ui: add new menu item
 * piccolo2/player/QuietTime.py: new dialog to support quiet time
 * piccolo2/player/quiettime.ui: UI for new dialog

2017-12-05 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: autointegration can happen a number of times
 * piccolo2/player/player.ui: add spin box to select how often autointegration
   happens

2017-11-22 Magnus Hagdorn